test/scc/pp/errors/006.a
006.t:1:9: error: macro names must be identifiers